--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:scaleType="centerCrop"
-                    android:src="@mipmap/ic_launcher"
+                    android:src="@drawable/large"
                     app:layout_collapseMode="parallax"
             />
             <FrameLayout
@@ -85,4 +85,33 @@
         </android.support.v7.widget.CardView>
     </android.support.v4.widget.NestedScrollView>
 
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/main_tb_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:layout_anchor="@id/main_fl_title"
+    >
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:orientation="horizontal">
+            <Space android:layout_width="100dp" android:layout_height="100dp"/>
+            <TextView
+                    android:id="@+id/main_tv_toolbar_title"
+                    android:layout_width="match_parent" android:layout_height="wrap_content"
+                    android:text="人名"
+                    android:textColor="@android:color/white"
+                    android:visibility="invisible"
+            />
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/small"
+            app:civ_border_color="@android:color/white"
+            app:civ_border_width="2dp"
+
+    />
+    <!-- app:layout_behavior=".AvatarImageBehavior" -->
 </android.support.design.widget.CoordinatorLayout>
