--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,15 +44,16 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
-                            android:gravity="bottom|center_horizontal"
-                            android:text="人名"
+                            android:layout_marginTop="@dimen/title_margin"
+                            android:gravity="bottom|center"
+                            android:text="@string/person_name"
                     />
                     <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="4dp"
-                            android:text="头衔"
+                            android:text="@string/person_title"
                     />
                 </LinearLayout>
             </FrameLayout>
@@ -79,7 +80,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:lineSpacingExtra="8dp"
-                    android:text="我是一个很棒的人"
+                    android:text="@string/person_intro"
             />
 
         </android.support.v7.widget.CardView>
@@ -94,7 +95,7 @@
     >
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
         android:orientation="horizontal">
-            <Space android:layout_width="100dp" android:layout_height="100dp"/>
+            <Space android:layout_width="@dimen/image_final_width" android:layout_height="@dimen/image_final_width"/>
             <TextView
                     android:id="@+id/main_tv_toolbar_title"
                     android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -106,8 +107,8 @@
     </android.support.v7.widget.Toolbar>
 
     <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/image_width"
+            android:layout_height="@dimen/image_width"
             android:src="@drawable/small"
             app:civ_border_color="@android:color/white"
             app:civ_border_width="2dp"
