--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,8 +119,8 @@
             android:layout_height="@dimen/image_width"
             android:layout_gravity="center"
             android:src="@drawable/small"
-            app:civ_border_color="@android:color/white"
-            app:civ_border_width="2dp"
+            app:border_color="@android:color/white"
+            app:border_width="2dp"
             app:layout_behavior=".AvatarImageBehavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
